--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       </div>
       <div id="game"></div>
     </div>
-    <script type="text/javascript" src="../dist/game.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     <script> run() </script>
     <a href="https://github.com/jg20019/typed-snake"> [ View Source Here ] </a>
   </body>
